--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="Content-Language" content="en" />
 
         <title>Movies Catalog app</title>
+        <script async src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
 
@@ -27,7 +28,12 @@
                 </div>
                 
                 <div id="searchContainer">
+                    <input class="mc-margin-20" id="searchMovieNameElem" placeholder="Wpisz nazwę filmu..."></input>
+                    <button id="searchBtn" onclick="onSearchBtnClicked()">Szukaj</button>
+                
+                    <div id="foundMovieContainer">
 
+                    </div>
                 </div>
             </div>
         </section>
